# fhe-wasm

./: .gitmodules  Cargo.toml  README.md  examples.wat
core/examples/: Cargo.toml
core/examples/src/: lib.rs
core/fwasm-macros/: Cargo.toml
core/fwasm-macros/src/: lib.rs
core/fwasm-sdk/: Cargo.toml
core/fwasm-sdk/src/: lib.rs
core/wasm-memory/: Cargo.toml
core/wasm-memory/src/: context.rs  lib.rs  vm.rs  wasm_code.rs
core/wasm-memory/src/context/: storage.rs
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/fwasm/: Cargo.toml
pallets/fwasm/src/: lib.rs  mock.rs  tests.rs
primitives/: Cargo.toml
primitives/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
